{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 47,
  "lineage": "74fb44b5-bb61-5071-4cc0-9d79b4b278c6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "routing_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0324a5528a84a9d2e",
            "id": "rtb-0324a5528a84a9d2e",
            "owner_id": "136013817859",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b3f17122aa26ba84",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route_table"
            },
            "vpc_id": "vpc-09d92a7df6001dbfd"
          },
          "dependencies": [
            "aws_internet_gateway.internet_getway",
            "aws_vpc.bobbyvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bostion_host_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08706cb5f68222d09",
            "arn": "arn:aws:ec2:ap-south-1:136013817859:instance/i-02f740bf8b647461e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02f740bf8b647461e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task1_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dad99008875f4e7d",
            "private_dns": "ip-192-168-0-231.ap-south-1.compute.internal",
            "private_ip": "192.168.0.231",
            "public_ip": "52.66.208.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-079d6e05189d086dd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a2ebe9da83993ffd",
            "tags": {
              "Name": "Bositon_Host_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-038da423981a00e34"
            ]
          },
          "dependencies": [
            "aws_security_group.bostion_host_security_grp",
            "aws_subnet.public_subnet",
            "aws_vpc.bobbyvpc",
            "tls_private_key.key1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08706cb5f68222d09",
            "arn": "arn:aws:ec2:ap-south-1:136013817859:instance/i-0fed231ac59ff6ee7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fed231ac59ff6ee7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task1_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b9670c6f2499d9d0",
            "private_dns": "ip-192-168-1-50.ap-south-1.compute.internal",
            "private_ip": "192.168.1.50",
            "public_ip": "13.234.29.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-098374e6bc842873a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03e6f46cadc1411b8",
            "tags": {
              "Name": "MySql_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ad1ab47e54ecb348"
            ]
          },
          "dependencies": [
            "aws_security_group.bostion_host_security_grp",
            "aws_security_group.mysql_security_grp",
            "aws_security_group.wordpress_security_grp",
            "aws_subnet.private_subnet",
            "aws_vpc.bobbyvpc",
            "tls_private_key.key1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fab75b03b2c2152d",
            "arn": "arn:aws:ec2:ap-south-1:136013817859:instance/i-0b6144b6268b39e54",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b6144b6268b39e54",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task1_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0427fe0d8a0dd955d",
            "private_dns": "ip-192-168-0-218.ap-south-1.compute.internal",
            "private_ip": "192.168.0.218",
            "public_ip": "13.235.243.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06c00021d23411086",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a2ebe9da83993ffd",
            "tags": {
              "Name": "WordPress_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07784d91814cff1f9"
            ]
          },
          "dependencies": [
            "aws_security_group.bostion_host_security_grp",
            "aws_security_group.wordpress_security_grp",
            "aws_subnet.public_subnet",
            "aws_vpc.bobbyvpc",
            "tls_private_key.key1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_getway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:136013817859:internet-gateway/igw-0b3f17122aa26ba84",
            "id": "igw-0b3f17122aa26ba84",
            "owner_id": "136013817859",
            "tags": {
              "Name": "Internet Getway"
            },
            "vpc_id": "vpc-09d92a7df6001dbfd"
          },
          "dependencies": [
            "aws_vpc.bobbyvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routing_table_asson",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cfd1892d4e5302bb",
            "route_table_id": "rtb-0324a5528a84a9d2e",
            "subnet_id": "subnet-0a2ebe9da83993ffd"
          },
          "dependencies": [
            "aws_default_route_table.routing_table",
            "aws_internet_gateway.internet_getway",
            "aws_subnet.public_subnet",
            "aws_vpc.bobbyvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bostion_host_security_grp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:136013817859:security-group/sg-038da423981a00e34",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-038da423981a00e34",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "For login to bostion host from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bostion_host_security_grp",
            "name_prefix": "",
            "owner_id": "136013817859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security_Group_Bostion_host"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d92a7df6001dbfd"
          },
          "dependencies": [
            "aws_vpc.bobbyvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql_security_grp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:136013817859:security-group/sg-0ad1ab47e54ecb348",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad1ab47e54ecb348",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Only bostion host can connect to MySql using ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-038da423981a00e34"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Only web ping sql from public subnet",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-07784d91814cff1f9"
                ],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "WordPress can connect to MySql",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07784d91814cff1f9"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mysqlsecuritygrp",
            "name_prefix": "",
            "owner_id": "136013817859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security_Group_MySql"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d92a7df6001dbfd"
          },
          "dependencies": [
            "aws_security_group.bostion_host_security_grp",
            "aws_security_group.wordpress_security_grp",
            "aws_vpc.bobbyvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress_security_grp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:136013817859:security-group/sg-07784d91814cff1f9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07784d91814cff1f9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "For connecting to WordPress from outside world",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "icmp from VPC",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "Only bostion host can connect to WordPress using ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-038da423981a00e34"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "wordpress_security_grp",
            "name_prefix": "",
            "owner_id": "136013817859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security_Group_WordPress"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d92a7df6001dbfd"
          },
          "dependencies": [
            "aws_security_group.bostion_host_security_grp",
            "aws_vpc.bobbyvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:136013817859:subnet/subnet-03e6f46cadc1411b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-03e6f46cadc1411b8",
            "map_public_ip_on_launch": true,
            "owner_id": "136013817859",
            "tags": {
              "Name": "Private_Subnet"
            },
            "vpc_id": "vpc-09d92a7df6001dbfd"
          },
          "dependencies": [
            "aws_vpc.bobbyvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:136013817859:subnet/subnet-0a2ebe9da83993ffd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-0a2ebe9da83993ffd",
            "map_public_ip_on_launch": true,
            "owner_id": "136013817859",
            "tags": {
              "Name": "Public_Subnet"
            },
            "vpc_id": "vpc-09d92a7df6001dbfd"
          },
          "dependencies": [
            "aws_vpc.bobbyvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bobbyvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:136013817859:vpc/vpc-09d92a7df6001dbfd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0304a8bfa30ea449f",
            "default_route_table_id": "rtb-0324a5528a84a9d2e",
            "default_security_group_id": "sg-07964da9518637022",
            "dhcp_options_id": "dopt-479e5c2c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09d92a7df6001dbfd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0324a5528a84a9d2e",
            "owner_id": "136013817859",
            "tags": {
              "Name": "bobbyvpc"
            }
          }
        }
      ]
    }
  ]
}